# OpenChat

./: .gitignore  Login.tsx  \  package-lock.json  package.json
.github/workflows/: ci.yml
gleam-src/frontend/: gleam.toml
gleam-src/middle/: gleam.toml
gleam-src/protocol/: README.md  gleam.toml
gleam-src/protocol/src/: protocol.gleam
src/: App.css  App.tsx  Chat.tsx  Footer.tsx  Login.tsx  Navbar.tsx  ToS.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: client_user.rs  mod.rs  user.rs
src-tauri/src/network/: p2p.rs
src/styles/: App.css  ToS.css
