[package]
name = "openchat-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openchat_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libp2p = { version = "0.55.0", features = ["full"] }
tokio = { version = "1.34.0", features = ["full"] }
xcap = "0.6.0"
# main db dependency is libsql
libsql = "0.9.9"
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
